--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,27 +1,6 @@
 {
   "version": "0.2.0",
   "configurations": [
-    
-    {
-      "name": "Run C Program",
-      "type": "cppdbg",
-      "request": "launch",
-      "program": "C:/Users/jerem/OneDrive/Desktop/GitHub/Trading-or-Financial-Data-Analyzer/src/main.exe",
-      "args": [],
-      "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
-      "environment": [],
-      "externalConsole": true,
-      "MIMode": "gdb",
-      "setupCommands": [
-        {
-          "description": "Enable pretty-printing for gdb",
-          "text": "-enable-pretty-printing",
-          "ignoreFailures": true
-        }
-      ],
-      "preLaunchTask": "Build C Program"
-    },
     {
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
@@ -29,10 +8,10 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "c:/Users/dfj24/OneDrive/Desktop/Files/Unity/Trading-or-Financial-Data-Analyzer/src",
-      "program": "c:/Users/dfj24/OneDrive/Desktop/Files/Unity/Trading-or-Financial-Data-Analyzer/src/build/Debug/outDebug",
+      "cwd": "c:/Users/dfj24/OneDrive/Desktop/Trading-or-Financial-Data-Analyzer/src",
+      "program": "c:/Users/dfj24/OneDrive/Desktop/Trading-or-Financial-Data-Analyzer/src/build/Debug/outDebug",
       "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
+      "miDebuggerPath": "C:/mingw64/bin/gdb.exe",
       "setupCommands": [
         {
           "description": "Enable pretty-printing for gdb",
@@ -41,5 +20,6 @@
         }
       ]
     }
-  ]
+  ],
+  "compounds": []
 }
