--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,7 +58,9 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "C_Cpp.errorSquiggles": "disabled",
   "files.associations": {
-    "csv_reader.h": "c"
+    "csv_reader.h": "c",
+    "query_interface.h": "c",
+    "string.h": "c"
   },
   "makefile.configureOnOpen": true
 }
