--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,8 @@
   "files.associations": {
     "csv_reader.h": "c",
     "query_interface.h": "c",
-    "string.h": "c"
+    "string.h": "c",
+    "data_structures.h": "c"
   },
   "makefile.configureOnOpen": true
 }
